influxdb/deploy/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: influxdb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        app: influxdb
    name: influxdb
    namespace: influxdb
spec:
    replicas: 1
    selector:
        matchLabels:
            app: influxdb
    serviceName: influxdb
    template:
        metadata:
            labels:
                app: influxdb
        spec:
          volumes:
          - name: influxdb-data
            persistentVolumeClaim:
              claimName: influxdb-data-pvc
          containers:
          - image: influxdb:1.8.10
            name: influxdb
            ports:
            - containerPort: 8086
              name: influxdb
            volumeMounts:
            - mountPath: /var/lib/influxdb
              name: influxdb-data
---
apiVersion: v1
kind: Service
metadata:
    name: influxdb
    namespace: influxdb
spec:
    ports:
      - name: influxdb
        port: 8086
        targetPort: 8086
    selector:
        app: influxdb
    type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: influxdb-rewriterule
  namespace: influxdb
spec:
  replacePathRegex:
    regex: "^/influxdb/(.*)"
    replacement: "/$1"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homewizard-influxdb-http
  namespace: influxdb
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/influxdb/`)
      kind: Rule
      middlewares:
        - name: influxdb-rewriterule
          namespace: influxdb
      services:
        - kind: Service
          name: influxdb
          port: 8086
